# landtagszusammenfasser

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile.oapi  README.md  SETUP.md  deploy-compose.yml  docker-compose-testing.yml  docker-compose.yml  oapi_gen.ps1  oapi_gen.sh  structure.md
collector/: .env  .gitignore  Dockerfile  README.md  database_connector.py  dict_to_json.py  docker-compose.yml  interface.py  llm_connector.py  main.py  pyproject.toml  run.py  scraper_interface.py  scraper_manager.py
collector/collector/: config.py  convert.py  document.py  interface.py  llm_connector.py  main.py  scrapercache.py
collector/collector/documents/: beschlussempfehlung.py  document.py  ds_entwurf.py  plenarproto.py  stellungnahme.py
collector/collector/scrapers/: bt-openapi.yaml  bt_scraper.py  bylt_scraper-stop.py  bylt_scraper.py  bylt_standardization.toml  bystmj_scrapeasdjfr.py  bystmj_scraper.py
collector/collector/tests/: notest.py  notest2.py  test_byltscraper.py  test_document.py
collector/documents/: document.py
collector/scrapers/: bmj_scraper.py  by_lt.py  bylt_scraper.py  bystmj_scraper.py
collector/scrapers/models/: autor.py  dokument.py  gesetzesvorhaben.py  identifikator.py  response.py  station.py  stellungnahme.py
collector/spielwiese/: vorgangsmappe.html
collector/tests/: test_bylt_scraper.py  test_bystmj_scraper.py
database/: .clang-format  .env  .gitignore  Cargo.toml  Dockerfile  SETUP.md  config.toml  diesel.toml  docker-compose.yml  docker-entry.sh  down.sql  up.sql
database/.sqlx/: query-021ab1ea5d06cb1a24879e87a76648376290eb744c1858a8dffedeb2b1589c96.json  query-0236577b310be0ff1e01c352ce9bc5af3fac22def670512ad96cb46a1e83ec16.json  query-030877562450528427765ae869e9e2c9bde0dc00462841a474e066603640cff5.json  query-0316660e57ad2f6dc38d5f32a1cd11ff2675a6a5fed25bf83c2bc143351d82d7.json  query-0337b8162bf82f11edbf6b0a473d15229fd5b94d3561c91c92085a081e254c26.json  query-0375f3727653ff693e12d61b82c9aa3f7345fc27e530fd8c91f59385c31c74e9.json  query-03f10c0fb3e777224469bb65f511c0fdf25a685a710dabc23788bd831a2561b6.json  query-043b61172f7c5a89fc704dfdd2ddc9d97f39ecc5994cca124742fb95a5023da4.json  query-0457818c22aedc546fe3aaa1cd579d178e2ae5281e710d703f9322963f0ba6c3.json  query-049de952e61a81b72ddc35bf6bde1c57ca171ee514019cec76b3921e88fc4f98.json  query-091b260502e75099050c08eb4721bcb6eea27a2d2a96347879734a91458f8c4a.json  query-0a82839c5d8b95a0ba18dbf78eebe8bd0a3efdb1d9fb44a2cba3c6e000478fb7.json  query-0af5779d941fa4f48685953d8c98610a9c97e7115a8b149f1f88cc00ae7bc87c.json  query-0e401a59baeaacd8068be6108f5f80bd2e91c51a84ba94dc356c610f1dbb4ce5.json  query-0e7fecf9f51ed5f1d6d5b59db62cd70330b955b533a1e37039d38ce60f569f01.json  query-10cdf369330f7992b7c6e781cdaeca1bd2e7fc94c4fd851a9a1571d260d76c73.json  query-12f2b0f9a8c4706d61185833de573ae6f8004c868e6768b22b7745fbc38d0ab7.json  query-14ab9c1753b70c8115f3d26bbb7a83750f54023242042aebcc3f602b1ba9f7d2.json  query-1625a272589ea00748e1750d9e8c9567d64d959414d94276d736f6ad64d2643f.json  query-16ea98d8c0a1a1dafa414e8f515d3242473333367805d8de24e614b9ddb3c99b.json  query-172bbe7f24c2a9f2c75d13ad5a09f7c25a5ea32599e0306c1d4f869e7f2aa9ab.json  query-17b111aaf23abcd1300cc9e193a4324b618c0301a8fc6974957636174a3ff849.json  query-17fcbf3cd2c68aab194951fa13eb5dedfc094ba715d4aa6eec20ab57c8517b65.json  query-183ddd0c55e8d826a385ca88758316a0885750ca3e83cf083ea6cfb4d87ddcf9.json  query-192b1b4beb346d039907278a279c98438f594a71e71951177cdadbcb96b0d29e.json  query-19f052329056492e10ae15fc7ce8d9156d1fe805aaa79e68e99ebde45cb66b94.json  query-1a7a80e71eae56ea4722571b9830a586164c8ce3dcbd540ad90bc9086c2dba72.json  query-1ad536834f779b8332792a25dee8f75557acfee51e11ef81329941cf93657687.json  query-1af7b484f34e944552a824b48ca288eedf5bea1ea3d778ddc9905bb43f33eb05.json  query-1baec834be0a03c81d15b29bc0fd75ce97df5968ce462a9daef8c6e47709d158.json  query-1c385e141dac20b7561d703c75a71c57cdd9a52c3e99cc478c72d2b7651ed331.json  query-1c97480d868a0468c92ce3dcd7aeca810d45e7437ef8ea750f974ebda89b9988.json  query-1ceb0420b583af643c1a3cd22ed5abddf10064e9715546b3d1f6fdd23918557c.json  query-1d1d166c1b54a8a3681ff7bf4cf9c39abdee9c25f714fbd1f22e2dffce6c9a08.json  query-1dcd3bcaaa1e6182668ee43350130fa11284c6a53c68994f63a0f8c1c842866b.json  query-1e75879ef8ecf63008668963457ed19cfbe3912d3153afb4b336239f01878ec4.json  query-1ea4ac59e0dafb9231fc0911d68eb97ccc3ae218f7599e782f7272d56a5fe372.json  query-1f7097e7f0a6159a89f33cdd92d053bba87cae09df79d24c38b7daa3736d7072.json  query-2265c99fb6bdb0baa9c0a7feb63e5f9e3244089f879ec49dee38cff51ca5bcb4.json  query-23316b4de4bc7cdaf8b232cbef96a6d20c846172981352e9cdd5f2e46458097c.json  (+215 more)
database/datastructure-generator/: Cargo.toml
database/datastructure_generator/: full_system.rs
database/datastructure_generator/src/: main.rs  test.sql
database/diesel-interaction/: Cargo.toml
database/diesel-interaction/derive-schema/: Cargo.toml
database/diesel-interaction/src/: lib.rs
database/migrations/: 20250302145126_enumerations.sql  20250302145212_vorgang_setup.sql  20250302145213_as_setup.sql  20250302145213_sitzung_setup.sql  20250302145214_infra_setup.sql  20250302145215_triggers.sql
database/migrations/2024-07-03-164927_depless_data/: down.sql  up.sql
database/migrations/2024-07-03-165055_entities_data/: down.sql  up.sql
database/shared_data/: dokumenttypen.csv  fraktionen.csv  initiatoren.csv  schlagworte.csv
database/src/: config.rs  error.rs  main.rs  router.rs  util.rs
database/src/api/: auth.rs  get.rs  mod.rs  (+4 more)
database/test-compiler/: Cargo.toml
database/tests/: merging_tests.rs  mrgtest_identifier_modification_dump.json  mrgtest_linkchange_dump.json  mrgtest_linkchange_fail_dumpa.json  mrgtest_titlechange_dump.json  object_creation.rs  object_merging.rs  object_retrieval.rs  samplefile.py  test_insert_nomerge_dump.json
webserver/: .env  Dockerfile  main.py  pagestate.toml  pyproject.toml
webserver/webserver/: generation.py  main.py
webserver/zolasite/: .gitignore  config.toml
(+149 files in other folders)
