[tool.poetry]
name = "collector"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pydantic = "^2.9.2"
openapi-client = {path = "oapicode"}
aiohttp = "^3.11.10"
redis = "^5.2.1"
litellm = "^1.57.4"
pytest-asyncio = "^0.25.2"
pypdf = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
