[package]
name = "ltzusfas-db"
version = "0.1.0"
edition = "2021"
authors = ["Benedikt Schäfer", "Noah Lokocz", "Liv Märtens"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-macros = "0.4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "uuid", "serde_json"] }
diesel_migrations = "2"
deadpool-diesel = { version = "0.6", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }
thiserror = "1.0.61"
