[package]
name = "ltzusfas-db"
version = "0.1.0"
edition = "2021"
authors = ["Benedikt Schäfer", "Noah Lokocz", "Liv Märtens"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

axum = { version = "0.7", features = ["macros"] }
axum-macros = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["fast-rng", "v7", "serde"] }
derive_builder = "0.20.0"
clap = { version = "4.5.16", features = ["derive", "env"] }
lettre = "0.11.7"

strum = { version = "0.26.3", features = ["derive"] }
axum-extra = {version = "0.9.6", features= ["cookie"]}
dotenv = "0.15.0"
snafu = "0.8.5"
sha256 = "1.5.0"
rand = "0.8.5"
futures = "0.3.31"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
openapi = { version = "0.1.0", path = "oapicode", features = ["server"] }

[dev-dependencies]
similar = "2.7.0"
