[tool.poetry]
name = "webserver"
version = "0.1.0"
description = ""
authors = ["Chrystalkey <schaefer10056@gmail.com>"]
readme = "README.md"
packages =[
    {include="webserver", from=".."}
]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.9.2"
openapi-client = {path = "oapicode"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
