[package]
name = "datastructure-generator"
version = "0.1.0"
description = "A tool to generate database and api rust data structures from the database files"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlparser = { version = "0.50.0", features = ["serde"] }
thiserror = "1.0.63"
